# timetrack

./: .gitignore  README.md  build.py  install.sh  pyproject.toml  timetrack.spec  timetrack_profile.py
tests/: conftest.py  test_timetrack.py
timetrack/: cli.py
