[tool.poetry]
name = "timetrack"
version = "0.1.0"
description = "A simple command-line time tracking tool"
authors = ["Henry Bergström <henrybergstrom@pm.me>"]
readme = "README.md"
packages = [{include = "timetrack"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
pyinstaller = "^6.11.0"

[tool.poetry.scripts]
timetrack = "timetrack.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Next, timetrack/__init__.py
__version__ = "0.1.0"
